--- a/mainForm.resx
+++ b/mainForm.resx
@@ -132,6 +132,9 @@
   <metadata name="saveWordDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>249, 17</value>
   </metadata>
+  <metadata name="toolAddWord.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>540, 17</value>
+  </metadata>
   <data name="removeItemBtn.ToolTip" xml:space="preserve">
     <value>Для удаления варианта
  перевода удалите из 
